--- a/index.html
+++ b/index.html
@@ -47,6 +47,54 @@
       </div>
     </div>
   </div>
+  <div class="py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <h1 class="">About Us</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <p class="">Mathematics Students' Society, HKUSTSU. Established in 1991. Being one of the first few students’ societies founded in the Hong Kong University of Science and Technology, Mathematics Students' Society has been serving members whole-heartedly
+            for 23 years.&nbsp;<br><br>Mathematics Students' Society aims&nbsp;<br></p>
+          <ol class="">
+            <li>to enhance and stimulate the interest in mathematics among members,</li>
+            <li>to promote the welfare of the members,</li>
+            <li>and to promote academic, extra-curricular activities and social interests among members.</li>
+          </ol>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <h1 class="">Executive Committee Members</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="row">
+            <div class="col-md-4"></div>
+            <div class="col-md-4"></div>
+            <div class="col-md-4"></div>
+          </div>
+          <div class="row">
+            <div class="col-md-4"></div>
+            <div class="col-md-4"></div>
+            <div class="col-md-4"></div>
+          </div>
+          <div class="row">
+            <div class="col-md-4"></div>
+            <div class="col-md-4"></div>
+            <div class="col-md-4"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
   <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
   <script src="https://pingendo.com/assets/bootstrap/bootstrap-4.0.0-alpha.6.min.js"></script>
